update markdown note 图片

--- a/markdown/图片.md
+++ b/markdown/图片.md
@@ -1,7 +1,7 @@
 ##图片
-![图片描述](public/imgs/example.jpg)
+![图片描述](../public/imgs/example.jpg)
 
 原文：
 ```
-![图片描述](public/imgs/example.jpg)
+![图片描述](../public/imgs/example.jpg)
 ```
