--- a/markdown/代码.md
+++ b/markdown/代码.md
@@ -18,13 +18,11 @@ var fashionAlert = function( msg ) {
 ```
 
 原文：
-```
-```````
-var fashionAlert = function( msg ) {
-	alert( 'Hello World' ); //You're beautiful
-}
-```````
-```
+    ```
+    var fashionAlert = function( msg ) {
+    	alert( 'Hello World' ); //You're beautiful
+    }
+    ```
 
 ###代码块高亮
 ```javascript
@@ -34,10 +32,8 @@ var fashionAlert = function( msg ) {
 ```
 
 原文：
-```
-```````javascript
-var fashionAlert = function( msg ) {
-	alert( 'Hello World' ); //You're beautiful
-}
-```````
-```
+    ```javascript
+    var fashionAlert = function( msg ) {
+    	alert( 'Hello World' ); //You're beautiful
+    }
+    ```
