--- a/markdown/代码.md
+++ b/markdown/代码.md
@@ -18,11 +18,14 @@ var fashionAlert = function( msg ) {
 ```
 
 原文：
-    ```
-    var fashionAlert = function( msg ) {
-    	alert( 'Hello World' ); //You're beautiful
-    }
-    ```
+```
+\`\`\`
+var fashionAlert = function( msg ) {
+	alert( 'Hello World' ); //You're beautiful
+}
+\`\`\`
+```
+===
 
 ###代码块高亮
 ```javascript
@@ -32,8 +35,10 @@ var fashionAlert = function( msg ) {
 ```
 
 原文：
-    ```javascript
-    var fashionAlert = function( msg ) {
-    	alert( 'Hello World' ); //You're beautiful
-    }
-    ```
+```
+\`\`\`javascript
+var fashionAlert = function( msg ) {
+	alert( 'Hello World' ); //You're beautiful
+}
+\`\`\`
+```
