update markdown note 代码

--- a/markdown/代码.md
+++ b/markdown/代码.md
@@ -19,11 +19,11 @@ var fashionAlert = function( msg ) {
 
 原文：
 ```
-\`\`\`
+` ` `
 var fashionAlert = function( msg ) {
 	alert( 'Hello World' ); //You're beautiful
 }
-\`\`\`
+` ` `
 ```
 ===
 
@@ -36,9 +36,9 @@ var fashionAlert = function( msg ) {
 
 原文：
 ```
-\`\`\`javascript
+` ` `javascript
 var fashionAlert = function( msg ) {
 	alert( 'Hello World' ); //You're beautiful
 }
-\`\`\`
+` ` `
 ```
