update markdown note 代码

--- a/markdown/代码.md
+++ b/markdown/代码.md
@@ -17,13 +17,13 @@ var fashionAlert = function( msg ) {
 }
 ```
 
-原文：
+原文：（请忽略```后的/）
 ```
-` ` `
+```/
 var fashionAlert = function( msg ) {
 	alert( 'Hello World' ); //You're beautiful
 }
-` ` `
+```/
 ```
 ===
 
@@ -34,11 +34,11 @@ var fashionAlert = function( msg ) {
 }
 ```
 
-原文：
+原文：（请忽略```后的/）
 ```
-` ` `javascript
+```javascript
 var fashionAlert = function( msg ) {
 	alert( 'Hello World' ); //You're beautiful
 }
-` ` `
+```/
 ```
