update postgresql note 数据类型
添加网络地址类型的笔记

--- a/database/postgresql/数据类型.md
+++ b/database/postgresql/数据类型.md
@@ -78,7 +78,7 @@ CREATE TYPE mood AS ENUM ('sad', 'ok', 'happy');
 ```sql
 CREATE TABLE person (
     name text,
-    current_mood mood 
+    current_mood mood
 );
 
 INSERT INTO person VALUES ('Moe', 'happy');
@@ -101,6 +101,51 @@ pg_enum是一个系统视图，从中可以查询枚举类型的定义
 ##Geometric
 
 ##Network Address
+
+类型 | 存储空间 | 描述
+------ | ------ | ------
+cidr | 7 或 9 字节 | IPv4和IPv6网络
+inet | 7 或 9 字节 | IPv4和IPv6地址和网络
+macaddr | 6 字节 | MAC地址
+
+在对cidr或者inet类型进行排序时，IPv4总是排在IPv6之前。
+
+inet类型的字面格式为：`address/y`。其中，*address*是IPv4或IPv6地址，*y*是网络掩码的位数。`/y`是可选的，若省略则对于IPv4默认为32，对于IPv6默认为128，此时意为主机。
+
+如果一个字段只表示网络，那么你应该选择用cidr类型，而不是inet类型。
+
+cidr用于保存IPv4 或 IPv6网络，字面格式为：`address/y`。例如：
+cidr Input | cidr Output | abbrev(cidr)
+------ | ------ | ------
+192.168.100.128/25 | 192.168.100.128/25 | 192.168.100.128/25 
+192.168/24 | 192.168.0.0/24 | 192.168.0/24 
+192.168/25 | 192.168.0.0/25 | 192.168.0.0/25 
+192.168.1 | 192.168.1.0/24 | 192.168.1/24 
+192.168 | 192.168.0.0/24 | 192.168.0/24 
+128.1 | 128.1.0.0/16 | 128.1/16 
+128 | 128.0.0.0/16 | 128.0/16 
+128.1.2 | 128.1.2.0/24 | 128.1.2/24 
+10.1.2 | 10.1.2.0/24 | 10.1.2/24 
+10.1 | 10.1.0.0/16 | 10.1/16 
+10 | 10.0.0.0/8 | 10/8 
+10.1.2.3/32 | 10.1.2.3/32 | 10.1.2.3/32 
+2001:4f8:3:ba::/64 | 2001:4f8:3:ba::/64 | 2001:4f8:3:ba::/64 
+2001:4f8:3:ba:2e0:81ff:fe22:d1f1/128 | 2001:4f8:3:ba:2e0:81ff:fe22:d1f1/128 | 2001:4f8:3:ba:2e0:81ff:fe22:d1f1 
+::ffff:1.2.3.0/120 | ::ffff:1.2.3.0/120 | ::ffff:1.2.3/120 
+::ffff:1.2.3.0/128 | ::ffff:1.2.3.0/128 | ::ffff:1.2.3.0/128 
+
+inet和cidr的区别是：inet的`/y`只接受非零值来定义网络，省略则默认为主机；cidr不受非零值的限制，若忽略`/y`则会根据字面量来计算网络。
+
+macaddr的字面格式包括如下：
+```
+’08:00:2b:01:02:03’
+’08-00-2b-01-02-03’
+’08002b:010203’
+’08002b-010203’
+’0800.2b01.0203’
+’08002b010203’
+```
+其中字母不区分大小写
 
 ##Bit String
 
