update postgresql note 数据类型
调整格式

--- a/database/postgresql/数据类型.md
+++ b/database/postgresql/数据类型.md
@@ -115,7 +115,7 @@ inet类型的字面格式为：`address/y`。其中，*address*是IPv4或IPv6地
 如果一个字段只表示网络，那么你应该选择用cidr类型，而不是inet类型。
 
 cidr用于保存IPv4 或 IPv6网络，字面格式为：`address/y`。例如：
-cidr Input | cidr Output | abbrev(cidr)
+输入 | 输出 | abbrev(cidr)
 ------ | ------ | ------
 192.168.100.128/25 | 192.168.100.128/25 | 192.168.100.128/25
 192.168/24 | 192.168.0.0/24 | 192.168.0/24
