--- a/c/常量指针和指针常量的区别详解.md
+++ b/c/常量指针和指针常量的区别详解.md
@@ -16,7 +16,7 @@
 
 首先一定要明白哪种定义方式是常量指针，哪种是指针常量，这里可以记住三句话加深记忆：
 
-> * （指针）和 const（常量） 谁在前先读谁 ；*象征着地址，const象征着内容；谁在前面谁就不允许改变。
+> \* （指针）和 const（常量） 谁在前先读谁 ；\* 象征着地址，const象征着内容；谁在前面谁就不允许改变。
 
 好吧，让我们来看这个例子:
 
